# vkf

./: .gitignore  CMakeLists.txt  flake.nix  q  unixBuild.sh
shaders/: simple_shader.frag  simple_shader.vert  simple_shader.vert.spv
src/: app.cpp  app.hpp  buffer.cpp  buffer.hpp  descriptors.cpp  descriptors.hpp  device.cpp  device.hpp  main.cpp  model.cpp  model.hpp  pipeline.cpp  pipeline.hpp  renderer.cpp  renderer.hpp  resource_manager.cpp  resource_manager.hpp  simple_render_system.cpp  simple_render_system.hpp  swap_chain.cpp  swap_chain.hpp  texture.cpp  texture.hpp  window.cpp  window.hpp
src/components/: renderable.hpp  transform.hpp
src/core/: component_array.hpp  component_manager.hpp  coordinator.hpp  entity_manager.hpp  system.hpp  system_manager.hpp  types.hpp
src/core/event/: event.hpp  event_manager.hpp  event_types.hpp
src/core/io/: log_manager.hpp
src/core/window/: window.cpp  window.hpp
src/systems/: lsd_system.hpp  movement_system.hpp
